--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
+    "emailjs-com": "^3.1.0",
+    "js-file-download": "^0.4.12",
+    "pdf-viewer-reactjs": "^2.2.3",
     "react": "^18.1.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.2.0",
+    "react-parallax": "^3.3.0",
+    "react-pdf": "^5.5.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.2",
+    "styled-components": "^5.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
